Fix: Heading & Nav spacing

--- a/src/components/Header/HomePageHeading/HomePageHeading.module.scss
+++ b/src/components/Header/HomePageHeading/HomePageHeading.module.scss
@@ -11,7 +11,11 @@
   @include grid-main;
   @include type-xl;
 
+  padding: 0 20px;
+  gap: 20px;
+
   width: 100%;
+  height: 0.9em;
 
   .span-one {
     grid-column: 1 / 5;
